--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <img src="logo1.png" alt="Logo 1" class="logo-center">
     </header>
     <div class="container">
-        <div class="title">Alessio Tauro - Effect of pre-treatment conditions on Fe-based catalyst for e-fuel production via modified Fischer-Tropsch synthesis</div>
+        <div class="title">Effect of pre-treatment conditions on Fe-based catalyst for e-fuel production via modified Fischer-Tropsch synthesis</div>
         <div class="thank-you">Thank you for attending our presentation!</div>
         <div class="contacts">
             Here you can find our contacts:
