--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
             <div>
                 <strong>Alessio Tauro</strong>: PhD Student<br>
                 <a href="mailto:alessio.tauro@polito.it">alessio.tauro@polito.it</a><br>
-                <a href="https://www.polito.it/en/staff?p=052748">Website</a>
+                <a href="https://www.polito.it/en/staff?p=052748">Website</a><br>
+                <a href="https://www.linkedin.com/in/alessiotauro/">LinkedIn</a>
             </div>
             <div>
                 <strong>Fabio Salomone, PhD</strong>: Assistant Professor<br>
