--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
                 flex-direction: row;
             }
             .contact-info div {
-                width: 45%;
-                margin: 10px 2.5%;
+                width: 30%; /* Adjusted for three contacts per row */
+                margin: 10px 1.5%;
             }
             .logos img {
                 max-height: 100px;
@@ -96,7 +96,7 @@
         <img src="logo1.png" alt="Logo 1" class="logo-center">
     </header>
     <div class="container">
-        <div class="title">Effect of pre-treatment conditions on Fe-based catalyst for e-fuel production via modified Fischer-Tropsch synthesis</div>
+        <div class="title">Alessio Tauro - Effect of pre-treatment conditions on Fe-based catalyst for e-fuel production via modified Fischer-Tropsch synthesis</div>
         <div class="thank-you">Thank you for attending our presentation!</div>
         <div class="contacts">
             Here you can find our contacts:
@@ -108,10 +108,16 @@
                 <a href="https://www.polito.it/en/staff?p=052748">Website</a><br>
                 <a href="https://www.linkedin.com/in/alessiotauro/">LinkedIn</a>
             </div>
+            <strong>Fabio Salomone, PhD</strong>: Assistant Professor<br>
+            <a href="mailto:fabio.salomone@polito.it">fabio.salomone@polito.it</a><br>
+            <a href="https://www.polito.it/en/staff?p=030410">Website</a>
             <div>
-                <strong>Fabio Salomone, PhD</strong>: Assistant Professor<br>
-                <a href="mailto:fabio.salomone@polito.it">fabio.salomone@polito.it</a><br>
-                <a href="https://www.polito.it/en/staff?p=030410">Website</a>
+                
+            </div>
+            <div>
+                <strong>Fabrizio Celoria</strong>: PhD Student<br>
+                <a href="mailto:fabrizio.celoria@polito.it">fabrizio.celoria@polito.it</a><br>
+                <a href="https://www.polito.it/personale?p=fabrizio.celoria">Website</a>
             </div>
             <div>
                 <strong>Prof. Raffaele Pirone</strong>: Full-Professor<br>
