--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
             }
             .contact-info {
                 flex-direction: row;
+                justify-content: center;
             }
             .contact-info div {
                 width: 30%; /* Adjusted for three contacts per row */
@@ -108,14 +109,13 @@
                 <a href="https://www.polito.it/en/staff?p=052748">Website</a><br>
                 <a href="https://www.linkedin.com/in/alessiotauro/">LinkedIn</a>
             </div>
-            <strong>Fabio Salomone, PhD</strong>: Assistant Professor<br>
-            <a href="mailto:fabio.salomone@polito.it">fabio.salomone@polito.it</a><br>
-            <a href="https://www.polito.it/en/staff?p=030410">Website</a>
             <div>
-                
+                <strong>Fabio Salomone, PhD</strong>: Assistant Professor<br>
+                <a href="mailto:fabio.salomone@polito.it">fabio.salomone@polito.it</a><br>
+                <a href="https://www.polito.it/en/staff?p=030410">Website</a>
             </div>
             <div>
-                <strong>Fabrizio Celoria</strong>: PhD Student<br>
+                <strong>Fabrizio Celoria</strong>: Research Fellow<br>
                 <a href="mailto:fabrizio.celoria@polito.it">fabrizio.celoria@polito.it</a><br>
                 <a href="https://www.polito.it/personale?p=fabrizio.celoria">Website</a>
             </div>
