--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
         <img src="logo1.png" alt="Logo 1" class="logo-center">
     </header>
     <div class="container">
-        <div class="title">Alessio Tauro - Effect of pre-treatment conditions on Fe-based catalyst for e-fuel production via modified Fischer-Tropsch synthesis</div>
+        <div class="title">Fabio Salomone -  Effect of zeolite acidity on Fe-based catalysts for e-fuel production via CO2-modified Fischer-Tropsch Synthesis
+        </div>
         <div class="thank-you">Thank you for attending our presentation!</div>
         <div class="contacts">
             Here you can find our contacts:
@@ -115,7 +116,7 @@
                 <a href="https://www.polito.it/en/staff?p=030410">Website</a>
             </div>
             <div>
-                <strong>Fabrizio Celoria</strong>: Research Fellow<br>
+                <strong>Fabrizio Celoria</strong>: PhD Student<br>
                 <a href="mailto:fabrizio.celoria@polito.it">fabrizio.celoria@polito.it</a><br>
                 <a href="https://www.polito.it/personale?p=fabrizio.celoria">Website</a>
             </div>
