--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <img src="logo1.png" alt="Logo 1" class="logo-center">
     </header>
     <div class="container">
-        <div class="title">Fabio Salomone -  Effect of zeolite acidity on Fe-based catalysts for e-fuel production via CO2-modified Fischer-Tropsch Synthesis
+        <div class="title">Effect of zeolite acidity on Fe-based catalysts for e-fuel production via CO2-modified Fischer-Tropsch Synthesis
         </div>
         <div class="thank-you">Thank you for attending our presentation!</div>
         <div class="contacts">
@@ -108,10 +108,9 @@
                 <strong>Alessio Tauro</strong>: PhD Student<br>
                 <a href="mailto:alessio.tauro@polito.it">alessio.tauro@polito.it</a><br>
                 <a href="https://www.polito.it/en/staff?p=052748">Website</a><br>
-                <a href="https://www.linkedin.com/in/alessiotauro/">LinkedIn</a>
             </div>
             <div>
-                <strong>Fabio Salomone, PhD</strong>: Assistant Professor<br>
+                <strong>Fabio Salomone, PhD</strong>
                 <a href="mailto:fabio.salomone@polito.it">fabio.salomone@polito.it</a><br>
                 <a href="https://www.polito.it/en/staff?p=030410">Website</a>
             </div>
