--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <img src="logo1.png" alt="Logo 1" class="logo-center">
     </header>
     <div class="container">
-        <div class="title">Effect of zeolite acidity on Fe-based catalysts for e-fuel production via CO2-modified Fischer-Tropsch Synthesis
+        <div class="title">Effect of zeolite acidity on Fe-based catalysts for e-fuel production via CO_{2}-modified Fischer-Tropsch Synthesis
         </div>
         <div class="thank-you">Thank you for attending our presentation!</div>
         <div class="contacts">
