--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <a href="https://www.polito.it/en/staff?p=052748">Website</a><br>
             </div>
             <div>
-                <strong>Fabio Salomone, PhD</strong>
+                <strong>Fabio Salomone</strong>: Assistant Professor <br>
                 <a href="mailto:fabio.salomone@polito.it">fabio.salomone@polito.it</a><br>
                 <a href="https://www.polito.it/en/staff?p=030410">Website</a>
             </div>
