--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
     <div class="qr-section">
       <h2 href='https://doi.org/10.1016/j.cej.2025.162113'>Check out our latest pubblication!</h2>
-      <h10>Kinetic study and deactivation phenomena for the methanation of CO2 and CO mixed syngas on a Ni/Al2O3 catalyst</h10>
+      <h10>Kinetic study and deactivation phenomena for the methanation of CO2 and CO mixed syngas on a Ni/Al2O3 catalyst</h10><br>
       <a href="https://doi.org/10.1016/j.cej.2025.162113">Link here</a><br>
 
     </div>
