--- a/index.html
+++ b/index.html
@@ -60,14 +60,21 @@
       font-size: 24px;
       margin-bottom: 10px;
     }
-  .qr-section h10 {
+    .qr-section p {
       font-size: 16px;
       margin-bottom: 10px;
+
     }
-    .qr-section h11 {
-      font-size: 18px;
-      margin-bottom: 10px;
+    .special-issue h2 {
+    font-size: 24px;
+      margin-bottom: 10px;  
     }
+
+    .special-issue p {
+    font-size: 20px;
+      margin-bottom: 10px;  
+    }
+    
     .logos {
       display: flex;
       justify-content: center;
@@ -138,12 +145,23 @@
     </div>
 
     <div class="qr-section">
-      <h2 href='https://doi.org/10.1016/j.cej.2025.162113'>Check out our latest pubblication!</h2>
-      <h10>Kinetic study and deactivation phenomena for the methanation of CO2 and CO mixed syngas on a Ni/Al2O3 catalyst</h10><br>
-      <a href="https://doi.org/10.1016/j.cej.2025.162113">Link here</a><br>
-
+      <h2>Check out our latest publication!</h2>
+      <p>
+        <a href="https://doi.org/10.1016/j.cej.2025.162113" style="font-size: 16px; color: #333; text-decoration: none;">
+          Kinetic study and deactivation phenomena for the methanation of CO₂ and CO mixed syngas on a Ni/Al₂O₃ catalyst
+        </a>
+      </p>
     </div>
 
+<div class="special-issue">
+      <h2> Ready to publish your work on CCUS? <h2>
+      <p> Our special issue is calling for papers<p> 
+        <a href="https://www.mdpi.com/journal/sustainability/special_issues/H40335DPS7" style="font-size: 16px; text-decoration: none;">
+          Click here for more information
+        </a>
+    </div>
+
+    
     <div class="logos">
       <img src="logo2.png" alt="Logo 2">
       <img src="logo3.png" alt="Logo 3">
