--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     <div class="qr-section">
       <h2>Check out our latest publication!</h2>
       <p>
-        <a href="https://doi.org/10.1016/j.cej.2025.162113" style="font-size: 16px; color: #333; text-decoration: none;">
+        <a href="https://doi.org/10.1016/j.cej.2025.162113" style="font-size: 16px;  text-decoration: none;">
           Kinetic study and deactivation phenomena for the methanation of CO₂ and CO mixed syngas on a Ni/Al₂O₃ catalyst
         </a>
       </p>
