--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       vertical-align: middle;
     }
     .thank-you {
-      font-size: 22px;
+      font-size: 26px;
       font-weight: bold;
       margin: 10px 0;
     }
@@ -57,21 +57,21 @@
       margin: 30px 0;
     }
     .qr-section h2 {
-      font-size: 22px;
+      font-size: 26px;
       margin-bottom: 10px;
     }
     .qr-section p {
-      font-size: 16px;
+      font-size: 22px;
       margin-bottom: 10px;
 
     }
     .special-issue h2 {
-    font-size: 20px;
+    font-size: 26px;
       margin-bottom: 5px;  
     }
 
     .special-issue p {
-    font-size: 18px;
+    font-size: 22px;
       margin-bottom: 5px;  
     }
     
@@ -110,8 +110,15 @@
   </header>
   <div class="container">
     <div class="thank-you">
-      Thank you for visiting our posters!
+      Thank you for visiting our posters! <br><br>
+Our paper is now availabe on Chemical Engineering Journal<br>
+<a href="https://doi.org/10.1016/j.cej.2025.163154" style="font-size: 22px;  text-decoration: none;">
+          Effect of pre-treatment conditions on Fe-based catalyst for e-fuel production via modified Fischer-Tropsch synthesis<br>
+        </a><br>
+
+
     </div>
+
     <div class="contacts">
       Here you can find our contacts:
     </div>
@@ -125,12 +132,14 @@
       <div>
         <strong>Fabio Salomone</strong>: Assistant Professor <br>
         <a href="mailto:fabio.salomone@polito.it">fabio.salomone@polito.it</a><br>
-        <a href="https://www.polito.it/en/staff?p=030410">Website</a>
+        <a href="https://www.polito.it/en/staff?p=030410">Website</a><br>
+        <a href="https://www.linkedin.com/in/fabio-salomone-808530350/">LinkedIn</a><br>
       </div>
       <div>
         <strong>Fabrizio Celoria</strong>: PhD Student<br>
         <a href="mailto:fabrizio.celoria@polito.it">fabrizio.celoria@polito.it</a><br>
-        <a href="https://www.polito.it/personale?p=fabrizio.celoria">Website</a>
+        <a href="https://www.polito.it/personale?p=fabrizio.celoria">Website</a><br>
+        <a href="https://www.linkedin.com/in/fabrizio-celoria-666685362/">LinkedIn</a><br>
       </div>
       <div>
         <strong>Prof. Raffaele Pirone</strong>: Full-Professor<br>
@@ -140,23 +149,25 @@
       <div>
         <strong>Prof. Samir Bensaid</strong>: Full-Professor<br>
         <a href="mailto:samir.bensaid@polito.it">samir.bensaid@polito.it</a><br>
-        <a href="https://www.polito.it/en/staff?p=samir.bensaid">Website</a>
+        <a href="https://www.polito.it/en/staff?p=samir.bensaid">Website</a><br>
+        <a href="https://www.linkedin.com/in/samir-bensaid-654a0a1a3/">LinkedIn</a><br>
       </div>
     </div>
 
     <div class="qr-section">
-      <h2>Check out our latest publication!</h2>
+      <h2>Check out our latest publications!</h2>
       <p>
-        <a href="https://doi.org/10.1016/j.cej.2025.162113" style="font-size: 16px;  text-decoration: none;">
+        <a href="https://doi.org/10.1016/j.cej.2025.162113" style="font-size: 22px;  text-decoration: none;">
           Kinetic study and deactivation phenomena for the methanation of CO₂ and CO mixed syngas on a Ni/Al₂O₃ catalyst
-        </a>
+        </a><br>
+
       </p>
     </div>
 
 <div class="special-issue">
       <h2> Ready to publish your work on CCUS? <h2>
       <p> Our special issue is calling for papers<p> 
-        <a href="https://www.mdpi.com/journal/sustainability/special_issues/H40335DPS7" style="font-size: 16px; text-decoration: none;">
+        <a href="https://www.mdpi.com/journal/sustainability/special_issues/H40335DPS7" style="font-size: 20px; text-decoration: none;">
           Click here for more information
         </a>
     </div>
