--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       margin: 10px 0;
     }
     .contacts {
-      font-size: 20px;
+      font-size: 22px;
       margin: 20px 0;
     }
     .contact-info {
@@ -120,7 +120,7 @@ Our paper is now availabe on Chemical Engineering Journal<br>
     </div>
 
     <div class="contacts">
-      Here you can find our contacts:
+      Here you can find our contacts:<br>
     </div>
     <div class="contact-info">
       <div>
