--- a/index.html
+++ b/index.html
@@ -158,8 +158,10 @@ Our paper is now availabe on Chemical Engineering Journal<br>
       <h2>Check out our latest publications!</h2>
       <p>
         <a href="https://doi.org/10.1016/j.cej.2025.162113" style="font-size: 22px;  text-decoration: none;">
-          Kinetic study and deactivation phenomena for the methanation of CO₂ and CO mixed syngas on a Ni/Al₂O₃ catalyst
-        </a><br>
+          Kinetic study and deactivation phenomena for the methanation of CO₂ and CO mixed syngas on a Ni/Al₂O₃ catalyst</a><br><br>
+        <a href="https://doi.org/10.1021/acs.jpcc.5c01071" style="font-size: 22px;  text-decoration: none;">
+          Decrease in DRIFTS Optical Path Length Induced by Sample Reduction Led to Cu-Ce Phase Being IR-Invisible</a><br>        
+
 
       </p>
     </div>
