--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Poster Conference 100y FTP </title>
   <style>
-    body { 
+    body {
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
       background-color: #f4f4f4;
       text-align: center;
-    } 
-    .container { 
+    }
+    .container {
       width: 90%;
       margin: auto;
       padding: 20px;
@@ -106,18 +106,79 @@
 </head>
 <body>
   <header class="header">
-   
+    <img src="logo1.png" alt="Logo 1">
   </header>
   <div class="container">
     <div class="thank-you">
-      Ciao amore mio <br><br>
-ti amo alla follia<br>
+      Thank you for visiting our posters! <br><br>
+Our paper is now availabe on Chemical Engineering Journal<br>
+<a href="https://doi.org/10.1016/j.cej.2025.163154" style="font-size: 22px;  text-decoration: none;">
+          Effect of pre-treatment conditions on Fe-based catalyst for e-fuel production via modified Fischer-Tropsch synthesis<br>
+        </a><br>
 
 
+    </div>
+
+    <div class="contacts">
+      Here you can find our contacts:<br>
+    </div>
+    <div class="contact-info">
+      <div>
+        <strong>Alessio Tauro</strong>: PhD Student<br>
+        <a href="mailto:alessio.tauro@polito.it">alessio.tauro@polito.it</a><br>
+        <a href="https://www.polito.it/en/staff?p=052748">Website</a><br>
+        <a href="https://www.linkedin.com/in/alessiotauro/">LinkedIn</a><br>
+      </div>
+      <div>
+        <strong>Fabio Salomone</strong>: Assistant Professor <br>
+        <a href="mailto:fabio.salomone@polito.it">fabio.salomone@polito.it</a><br>
+        <a href="https://www.polito.it/en/staff?p=030410">Website</a><br>
+        <a href="https://www.linkedin.com/in/fabio-salomone-808530350/">LinkedIn</a><br>
+      </div>
+      <div>
+        <strong>Fabrizio Celoria</strong>: PhD Student<br>
+        <a href="mailto:fabrizio.celoria@polito.it">fabrizio.celoria@polito.it</a><br>
+        <a href="https://www.polito.it/personale?p=fabrizio.celoria">Website</a><br>
+        <a href="https://www.linkedin.com/in/fabrizio-celoria-666685362/">LinkedIn</a><br>
+      </div>
+      <div>
+        <strong>Prof. Raffaele Pirone</strong>: Full-Professor<br>
+        <a href="mailto:raffaele.pirone@polito.it">raffaele.pirone@polito.it</a><br>
+        <a href="https://www.polito.it/en/staff?p=raffaele.pirone">Website</a>
+      </div>
+      <div>
+        <strong>Prof. Samir Bensaid</strong>: Full-Professor<br>
+        <a href="mailto:samir.bensaid@polito.it">samir.bensaid@polito.it</a><br>
+        <a href="https://www.polito.it/en/staff?p=samir.bensaid">Website</a><br>
+        <a href="https://www.linkedin.com/in/samir-bensaid-654a0a1a3/">LinkedIn</a><br>
+      </div>
+    </div>
+
+    <div class="qr-section">
+      <h2>Check out our latest publications!</h2>
+      <p>
+        <a href="https://doi.org/10.1016/j.cej.2025.162113" style="font-size: 22px;  text-decoration: none;">
+          Kinetic study and deactivation phenomena for the methanation of CO₂ and CO mixed syngas on a Ni/Al₂O₃ catalyst</a><br><br>
+        <a href="https://doi.org/10.1021/acs.jpcc.5c01071" style="font-size: 22px;  text-decoration: none;">
+          Decrease in DRIFTS Optical Path Length Induced by Sample Reduction Led to Cu-Ce Phase Being IR-Invisible</a><br>        
+
+
+      </p>
+    </div>
+
+<div class="special-issue">
+      <h2> Ready to publish your work on CCUS? <h2>
+      <p> Our special issue is calling for papers<p> 
+        <a href="https://www.mdpi.com/journal/sustainability/special_issues/H40335DPS7" style="font-size: 20px; text-decoration: none;">
+          Click here for more information
+        </a>
+    </div>
 
     
     <div class="logos">
-      
+      <img src="logo2.png" alt="Logo 2">
+      <img src="logo3.png" alt="Logo 3">
+      <img src="logo4.png" alt="Logo 4">
     </div>
   </div>
 </body>
