--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
   </header>
   <div class="container">
     <div class="thank-you">
-      Thank you for visiting our posters! <br><br>
+      Thank you for attending our presentation! <br><br>
 Our paper is now availabe on Chemical Engineering Journal<br>
 <a href="https://doi.org/10.1016/j.cej.2025.163154" style="font-size: 22px;  text-decoration: none;">
           Effect of pre-treatment conditions on Fe-based catalyst for e-fuel production via modified Fischer-Tropsch synthesis<br>
@@ -160,8 +160,12 @@ Our paper is now availabe on Chemical Engineering Journal<br>
         <a href="https://doi.org/10.1016/j.cej.2025.162113" style="font-size: 22px;  text-decoration: none;">
           Kinetic study and deactivation phenomena for the methanation of CO₂ and CO mixed syngas on a Ni/Al₂O₃ catalyst</a><br><br>
         <a href="https://doi.org/10.1021/acs.jpcc.5c01071" style="font-size: 22px;  text-decoration: none;">
-          Decrease in DRIFTS Optical Path Length Induced by Sample Reduction Led to Cu-Ce Phase Being IR-Invisible</a><br>        
+          Decrease in DRIFTS Optical Path Length Induced by Sample Reduction Led to Cu-Ce Phase Being IR-Invisible</a><br>      
+          <a href="https://doi.org/10.1016/j.cej.2025.163392" style="font-size: 22px;  text-decoration: none;">
+            Thermocatalytic methane pyrolysis over iron-based catalysts for turquoise hydrogen production: activity and kinetic studies</a><br>      
+          
 
+        
 
       </p>
     </div>
