--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ Our paper is now availabe on Chemical Engineering Journal<br>
         <a href="https://doi.org/10.1016/j.cej.2025.162113" style="font-size: 22px;  text-decoration: none;">
           Kinetic study and deactivation phenomena for the methanation of CO₂ and CO mixed syngas on a Ni/Al₂O₃ catalyst</a><br><br>
         <a href="https://doi.org/10.1021/acs.jpcc.5c01071" style="font-size: 22px;  text-decoration: none;">
-          Decrease in DRIFTS Optical Path Length Induced by Sample Reduction Led to Cu-Ce Phase Being IR-Invisible</a><br>      
+          Decrease in DRIFTS Optical Path Length Induced by Sample Reduction Led to Cu-Ce Phase Being IR-Invisible</a><br><br>      
           <a href="https://doi.org/10.1016/j.cej.2025.163392" style="font-size: 22px;  text-decoration: none;">
             Thermocatalytic methane pyrolysis over iron-based catalysts for turquoise hydrogen production: activity and kinetic studies</a><br>      
           
