--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
   </header>
   <div class="container">
     <div class="thank-you">
-      Thank you for attending our presentation! <br><br>
+      Thank you for visiting our posters! <br><br>
 Our paper is now availabe on Chemical Engineering Journal<br>
 <a href="https://doi.org/10.1016/j.cej.2025.163154" style="font-size: 22px;  text-decoration: none;">
           Effect of pre-treatment conditions on Fe-based catalyst for e-fuel production via modified Fischer-Tropsch synthesis<br>
